deploy/networking-and-service-examples/5-ingress/bar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
  namespace: bar
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: bar
          image: "458891109543.dkr.ecr.us-east-1.amazonaws.com/bar:0.1.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /Privacy
              port: http
          resources:
            null
