deploy/networking-and-service-examples/5-ingress/bar/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-np
  namespace: bar
spec:
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
  selector:
    app: bar
